--- a/src/css/shoot.css
+++ b/src/css/shoot.css
@@ -1419,7 +1419,7 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
 #rezon-forms .field .control-field 
 {
     background: #fff;
-    /*border-radius: 2px;*/
+    border-radius: 2px;
     min-height: 45px;
     position: relative;
 }
@@ -2899,3 +2899,146 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
     }
 }
 /*----------------*/
+
+/************************Hotels***********************/
+.num_people .value_tag:before,
+.num_children .value_tag:before,
+.num_room .value_tag:before,
+.nationality_hotels .value_tag:before,
+.children_input:before {
+    content: '';
+    position: absolute;
+    top: 16px;
+    right: 12px;
+    width: 10px;
+    height: 10px;
+    border-top: 1px solid #7921D5;
+    border-left: 1px solid #7921D5;
+    transform: rotate(-135deg);
+    cursor: pointer;
+    transition: transform 0.2s;
+}
+.num_people .value_tag.rotate:before,
+.num_children .value_tag.rotate:before,
+.num_room .value_tag.rotate:before,
+.nationality_hotels .value_tag.rotate:before,
+.children_input.rotate:before {
+    transform: rotate(45deg);
+}
+.num_people,
+.num_children,
+.num_room {
+    flex-basis: 8%;
+}
+.nationality_hotels {
+     flex-basis: 22%;
+ }
+.option_box {
+    position: absolute;
+    top: 102%;
+    left: 0;
+    background-color: #fff;
+    width: 100%;
+    list-style-type: none;
+    padding: 0;
+    margin-bottom: 0;
+    z-index: 10;
+    max-height: 0;
+    transition: max-height 0.5s ease-out;
+    overflow: hidden;
+    border-radius: 3px;
+}
+.option_box.open {
+    max-height: 300px;
+    transition: max-height 0.8s ease-in;
+}
+.value_tag {
+    min-height: 45px;
+    padding: 0 15px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+.nationality_hotels .value_tag {
+    padding: 0 15px;
+}
+.option_box li {
+    padding: 4px 15px;
+    box-sizing: content-box;
+    cursor: pointer;
+}
+.option_box li:hover {
+    background-color: rgba(38, 182, 255, 0.5);
+}
+.option_box li:first-child {
+    padding-top: 10px;
+}
+.option_box li:last-child {
+    padding-bottom: 15px;
+}
+#rezon-forms .nationality_select-home {
+    width: 100%;
+    border-radius: 3px;
+    min-height: 45px;
+    box-sizing: border-box;
+    padding: 0 10px;
+}
+.num_children .children_box {
+    position: absolute;
+    top: 102%;
+    left: 0;
+    min-width: 190px;
+    background-color: #fff;
+    border-radius: 3px;
+    box-shadow: 0 5px 15px 0 rgba(0,0,0,0.4);
+}
+.children_box-item {
+    padding: 15px;
+}
+.num_children .children-title {
+    color: rgb(138, 144, 163);
+    font-size: 12px;
+    font-weight: normal;
+}
+.children_input {
+    width: 100%;
+    height: 30px;
+    background-color: #e4f4ff;
+    border-radius: 3px;
+}
+#rezon-forms .num_children .children_input {
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+    box-sizing: border-box;
+    cursor: pointer;
+    position: relative;
+}
+.children_input:before {
+    top: 10px;
+}
+.test {
+    max-height: 300px;
+}
+.num_children .children_age {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    background-color: #eceff1;
+    font-size: 12px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease-out;
+    border-radius: 0 0 3px 3px;
+}
+.num_children .children_age.open {
+    max-height: 100px;
+    overflow-y: scroll;
+}
+.children_age li:first-child {
+    padding-top: 4px;
+}
+.children_age li:last-child {
+    padding-bottom: 4px;
+}
+/************************End Hotels***********************/
