--- a/src/css/shoot.css
+++ b/src/css/shoot.css
@@ -1387,8 +1387,8 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
 }
 #rezon-forms .field.date 
 {
-    -webkit-flex-basis: 10%;
-    flex-basis: 10%;
+    -webkit-flex-basis: 15%;
+    flex-basis: 15%;
     min-width: 80px;
 }
 #rezon-forms .oneway .field.date + .date .book-date,
@@ -1438,10 +1438,10 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
 #rezon-forms .field.find 
 {
     margin-left: auto;
-    -webkit-flex-basis: 9%;
+    -webkit-flex-basis: 15%;
     -webkit-flex-grow: 0;
     flex-grow: 0;
-    flex-basis: 9%;
+    flex-basis: 15%;
 }
 #rezon-forms .field .control-field 
 {
@@ -2110,193 +2110,83 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
 
 
 /************************Hotels***********************/
-#rezon-forms .num_people .value_tag:before,
-#rezon-forms .num_children .value_tag:before,
-#rezon-forms .num_room .value_tag:before,
-#rezon-forms .children_input:before {
-    content: '';
+#rezon-forms .hotel_guests {
+    flex-basis: 30%;
+}
+#rezon-forms .select_box {
+    width: 100%;
+    background-color: #fff;
+    box-sizing: border-box;
+    border-radius: 2px;
     position: absolute;
-    top: 16px;
-    right: 12px;
+    top: 102%;
+    left: 0;
+    box-shadow: 0 5px 15px 0 rgba(0,0,0,0.4);
+    z-index: 1;
+}
+.guest_flex {
+    display: flex;
+    padding: 20px 30px 30px;
+}
+#rezon-forms .select_box label.menu-title {
+    color: #8087a1;
+    opacity: 1;
+}
+#rezon-forms .arrow {
     width: 10px;
     height: 10px;
     border-top: 1px solid #7921D5;
     border-left: 1px solid #7921D5;
     transform: rotate(-135deg);
-    cursor: pointer;
-    transition: transform 0.2s;
-    z-index: 1;
-    z-index: 1;
-}
-
-#rezon-forms .num_people .value_tag.rotate:before,
-#rezon-forms .num_children .value_tag.rotate:before,
-#rezon-forms .num_room .value_tag.rotate:before,
-#rezon-forms .nationality_hotels .value_tag.rotate:before,
-#rezon-forms .children_input.rotate:before {
-    transform: rotate(45deg);
-}
-
-#rezon-forms .num_people,
-#rezon-forms .num_children,
-#rezon-forms .num_room {
-    flex-basis: 8%;
-}
-
-#rezon-forms .nationality_hotels {
-    flex-basis: 22%;
-}
-
-#rezon-forms .option_box {
+    transition: transform 0.2s linear;
     position: absolute;
-    top: 102%;
-    left: 0;
-    background-color: #fff;
-    width: 100%;
-    list-style-type: none;
-    padding: 0;
-    margin-bottom: 0;
-    z-index: 10;
-    max-height: 0;
-    transition: max-height 0.5s ease-out;
-    overflow: hidden;
-    border-radius: 3px;
+    top: 15px;
+    right: 15px;
+    opacity: 0.5;
 }
-
-    #rezon-forms .option_box.open {
-        max-height: 300px;
-        transition: max-height 0.8s ease-in;
-    }
-
-#rezon-forms .nationality_hotels .option_box.open {
-    overflow-y: auto;
+.hotel_guest {
+    flex-basis: 30%;
+    margin: 0 3%;
 }
-
-#rezon-forms .value_tag {
-    min-height: 45px;
-    padding: 0 15px;
-    cursor: pointer;
+.hotel_guest:first-child {
+    margin-left: 0;
+}
+.hotel_guest:last-child {
+    margin-right: 0px;
+}
+.select_guest {
+    background-color: #ecf1fb;
+}
+.value_guest {
+    padding:  5px 10px;
+    border-radius: 2px;
+    height: 40px;
+    box-sizing: border-box !important;
+    box-shadow: inset 1px 0px 3px 0px #B8C7E4;
     display: flex;
     align-items: center;
-}
-
-#rezon-forms .nationality_hotels .value_tag {
-    padding: 0;
-}
-#rezon-forms .nationality_hotels .nationality_focus:focus {
-    box-shadow: 0 0 8px 2px #00b0ff;
-    outline: none;
-    z-index: 1;
-}
-
-#rezon-forms .option_box li {
-    padding: 4px 15px;
-    box-sizing: content-box;
-    cursor: pointer;
-}
-
-    #rezon-forms .option_box li:hover {
-        background-color: rgba(38, 182, 255, 0.5);
-    }
-
-    #rezon-forms .option_box li:first-child {
-        padding-top: 5px;
-    }
-
-    #rezon-forms .option_box li:last-child {
-        padding-bottom: 5px;
-    }
-
-#rezon-forms .nationality_select-home {
-    width: 100%;
-    border-radius: 3px;
-    min-height: 45px;
-    box-sizing: border-box;
-    padding: 0 10px;
-}
-
-#rezon-forms .num_children .children_box {
-    position: absolute;
-    top: 102%;
-    left: 0;
-    min-width: 190px;
-    background-color: #fff;
-    border-radius: 3px;
-    box-shadow: 0 5px 15px 0 rgba(0,0,0,0.4);
-    overflow-y: auto;
-}
-
-#rezon-forms .children_box-item {
-    padding: 15px;
-}
-
-    #rezon-forms .children_box-item:first-child {
-        padding-bottom: 0;
-    }
-
-    #rezon-forms .children_box-item:last-of-type {
-        padding-top: 0;
-    }
-
-#rezon-forms .num_children .children-title {
-    color: rgb(138, 144, 163);
-    font-size: 12px;
-    font-weight: normal;
-}
-
-#rezon-forms .children_input {
-    width: 100%;
-    height: 30px;
-    background-color: #e4f4ff;
-    border-radius: 3px;
-}
-
-#rezon-forms .num_children .children_input {
-    display: flex;
-    align-items: center;
-    padding: 0 10px;
-    box-sizing: border-box;
-    cursor: pointer;
     position: relative;
+    cursor: pointer;
 }
-
-#rezon-forms .children_input:before {
-    top: 10px;
-}
-
-#rezon-forms .num_children .children_age {
+.options_guest {
     list-style-type: none;
     padding: 0;
-    margin: 0;
-    background-color: #eceff1;
-    font-size: 12px;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.5s ease-out;
-    border-radius: 0 0 3px 3px;
+    display: none;
 }
-
-    #rezon-forms .num_children .children_age.open {
-        max-height: 100px;
-        overflow-y: scroll;
-    }
-
-#rezon-forms .children_age li:first-child {
-    padding-top: 4px;
+.options_guest.open {
+    display: block;
 }
-
-#rezon-forms .children_age li:last-child {
-    padding-bottom: 4px;
+.option_guest {
+    padding: 5px 10px;
 }
-
-#rezon-forms .btn_children {
-    padding: 0 6px;
+.option_guest:hover {
+    background-color: #26b6ff;
+    cursor: pointer;
 }
-#rezon-forms .nationality_hotels .typeahead-selectpicker {
-    box-sizing: border-box;
-    width: 100%;
-    height: 45px;
-    border: none;
+#rezon-forms .arrow.rotate {
+    top: 20px;
+    transform: rotate(45deg);
+    opacity: 1;
 }
 /************************End Hotels***********************/
 
