--- a/src/css/shoot.css
+++ b/src/css/shoot.css
@@ -1114,33 +1114,7 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
     -webkit-transform: rotate(-135deg);
     width: 15px;
 }
-#rezon-forms .nationality_hotels .typeahead-selectpicker-control:before,
-#rezon-forms .nationality_hotels .typeahead-selectpicker-control.opened:before
-{
-    content: "";
-    position: absolute;
-    top: 16px;
-    right: 12px;
-    width: 10px;
-    height: 10px;
-    border-bottom: 1px solid #7921D5;
-    border-right: 1px solid #7921D5;
-    cursor: pointer;
-    z-index: 1;
-}
-#rezon-forms .nationality_hotels .typeahead-selectpicker-control.opened:before {
-    transform: rotate(-135deg);
-    opacity: 1;
-}
-#rezon-forms .nationality_hotels .typeahead-selectpicker-control:before {
-    transform: rotate(45deg);
-    opacity: 0.5;
-}
-#rezon-forms .nationality_hotels .typeahead-selectpicker-control {
-    opacity: 1;
-}
-#rezon-forms .typeahead-selectpicker-control.empty.opened:before,
-#rezon-forms .nationality_hotels .typeahead-selectpicker-control.empty
+#rezon-forms .typeahead-selectpicker-control.empty.opened:before
 {
     display: none;
 }
@@ -2159,20 +2133,29 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
 .nationality_hotels {
     padding: 5px 30px 14px;
 }
-.select_nationality {
-    position: relative;
-}
-.select_nationality .tt-dropdown-menu {
-    position: relative !important;
-}
-#rezon-forms  .nationality_hotels .typeahead-selectpicker {
-    width: 100%;
-    box-sizing: border-box;
+.nationality_input {
+    padding: 5px 10px;
     border-radius: 2px;
     height: 40px;
+    box-sizing: border-box !important;
     box-shadow: inset 1px 0px 3px 0px #B8C7E4;
+    display: flex;
+    align-items: center;
+    position: relative;
     background-color: #ecf1fb;
-    border: none;
+}
+.nationality_search {
+    width: 100%;
+    height: 300px;
+    position: absolute;
+    top: 100%;
+    overflow-y: scroll;
+    background-color: #fff;
+    box-shadow: 0 5px 15px 0 rgba(0,0,0,0.4);
+}
+.nationality_search .options{
+    list-style-type: none;
+    padding: 0;
 }
 #rezon-forms .select_box label.menu-title {
     color: #8087a1;
@@ -2232,9 +2215,6 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
     top: 20px;
     transform: rotate(45deg);
     opacity: 1;
-}
-#rezon-forms .nationality_hotels .delete {
-    height: 40px;
 }
 .hotel_guests .control-field {
     cursor: pointer;
