--- a/src/css/shoot.css
+++ b/src/css/shoot.css
@@ -2164,6 +2164,7 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
 }
 .search_input {
     padding: 10px 10px 6px;
+    position: relative;
 }
 .nationality_search-input {
     width: 100%;
@@ -2256,6 +2257,39 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
     padding: 0 10px;
     box-sizing: border-box !important;
     user-select: none;
+}
+.delete_search {
+    width: 17px;
+    height: 17px;
+    position: absolute;
+    top: 17px;
+    right: 20px;
+    opacity: 0.6;
+}
+.delete_search:hover {
+    opacity: 1;
+}
+.delete_search:before,
+.delete_search:after {
+    content: "";
+    background-color: #546e7a;
+    display: block;
+}
+.delete_search:before {
+    width: 1px;
+    height: 100%;
+    transform: rotate(45deg);
+    position: relative;
+    top: 0px;
+    left: 8px;
+}
+.delete_search:after {
+    width: 100%;
+    height: 1px;
+    transform: rotate(-135deg);
+    position: relative;
+    top: -9px;
+    left: 0px;
 }
 /************************End Hotels***********************/
 
