--- a/src/css/shoot.css
+++ b/src/css/shoot.css
@@ -286,7 +286,7 @@
 #rezon-forms .iata
 {
     bottom: 14px;
-    color: #90a4ae;
+    color: #333;
     font-size: 11px;
     letter-spacing: 0.1em;
     position: absolute;
